# template-turbo-next-shadcn-rust

./: .gitignore  README.md  cargo.toml  pnpm-lock.yaml  turbo.json
apps/backend/: Cargo.toml  package.json
apps/backend/src/: main.rs
apps/web/: next.config.js  package.json
apps/web/src/app/: page.tsx
